 ####    #### ####    #### ####    #### #######      ######
 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####    Quake Army Knife 6.4 Changelog

 * [alexander]: HL2 Support started. I changed quite a lot of files:
       runtime/addons/Defaults.qrk-//hl2 support started
       runtime/addons/Half-Life2/entities-hl2-cs.qrk-//first useable versions, added rcs headers
       runtime/addons/Half-Life2/entities-hl2-dm.qrk-//first useable versions, added rcs headers
       runtime/addons/Half-Life2/entities-hl2.qrk-//first useable versions, added rcs headers
       runtime/addons/Half-Life2/models-hl2.qrk-//first useable versions,cvs headers added
       runtime/plugins/entfgd2qrk.py-#removed bloody duplicated rcs headers again
       runtime/plugins/entfgd2qrk.py-#no default angle specifics
       runtime/plugins/entfgd2qrk.py-#can parse hl2 and hl2 mp hammer files now
       runtime/quarkpy/mapentities.py-#movedir specific gets angle maphandle
       runtime/quarkpy/qdictionnary.py-#added format names for hl2
       runtime/quarkpy/qdictionnary.py-#added vtf format name
       runtime/quarkpy/qdictionnary.py-#new messages for gcf files
       runtime/quarkpy/qdictionnary.py-#new: support for vtf file loading
       source/dllsource/dxtdecode/dxtdec.c-hl2 support started
       source/dllsource/dxtdecode/dxtdecode.def-;hl2 support started
       source/dllsource/dxtdecode/Makefile-#hl2 support started
       source/dllsource/gcfwrap/dxtdec.c-hl2 support started
       source/Makefile-#added makefile to build quark with the help of gmake
       source/prog/Game.pas-first gcf access attempt
       source/prog/QkGCF.pas-first gcf access attempt
       source/prog/QkImages.pas-hl2 support started